# debug-mcp

./: .mcp.json  LICENSE  README.md  pyproject.toml  test_script.py
src/mcp_debugger/: dap_client.py  server.py
